--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "COMP 3104 SPA deployment",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://<your-username>.github.io/<repository-name>",
+  "homepage": "https://ZacharyKeatings.github.io/COMP3104",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
